Update "runs for a benchmark/suite" to follow REST Use express-async-errors
