# src/laboratory/server/routes/runs.ts
@@ -1,5 +1,5 @@
+require('express-async-errors');
 import { Router } from 'express';
-import * as asyncHandler from 'express-async-handler';
 
 import {
   ILaboratory,
@@ -12,50 +12,40 @@ import {
 export function createRunRouter(lab: ILaboratory): Router {
   const router = Router();
 
-  router.get('', async (req, res) => {
-    res.json(await lab.allRuns());
-  });
-
-  router.get(
-    '/:name',
-    asyncHandler(async (req, res) => {
-      res.json(await lab.oneRun(req.params['name']));
+  router
+    .route('/runs')
+    .get(async (req, res) => {
+      if (
+        typeof req.query.benchmark === 'string' &&
+        typeof req.query.suite === 'string'
+      ) {
+        res.json(
+          await lab.allRunResults(req.query['benchmark'], req.query['suite'])
+        );
+      } else {
+        res.json(await lab.allRuns());
+      }
     })
-  );
-
-  router.patch(
-    '/:name',
-    asyncHandler(async (req, res) => {
-      const { status } = validate(UpdateRunStatusType, req.body);
-      res.json(await lab.updateRunStatus(req.params['name'], status));
-    })
-  );
-
-  router.post(
-    '/',
-    asyncHandler(async (req, res) => {
+    .post(async (req, res) => {
       const runRequest = validate(RunRequestType, req.body);
       const run = await lab.createRunRequest(runRequest);
       res.json(run);
-    })
-  );
+    });
 
-  router.post(
-    '/:name/results',
-    asyncHandler(async (req, res) => {
-      const { measures } = validate(ReportRunResultsType, req.body);
-      res.json(await lab.reportRunResults(req.params['name'], measures));
+  router
+    .route('/runs/:name')
+    .get(async (req, res) => {
+      res.json(await lab.oneRun(req.params['name']));
     })
-  );
+    .patch(async (req, res) => {
+      const { status } = validate(UpdateRunStatusType, req.body);
+      res.json(await lab.updateRunStatus(req.params['name'], status));
+    });
 
-  router.get(
-    '/:benchmark/:suite',
-    asyncHandler(async (req, res) => {
-      res.json(
-        await lab.allRunResults(req.params['benchmark'], req.params['suite'])
-      );
-    })
-  );
+  router.post('/runs/:name/results', async (req, res) => {
+    const { measures } = validate(ReportRunResultsType, req.body);
+    res.json(await lab.reportRunResults(req.params['name'], measures));
+  });
 
   return router;
 }
